<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    style="@style/Widget.Material3.CardView.Elevated">

    <!-- Contenedor general -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgCartCover"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:background="@drawable/shape_image_border" />

        <!-- Contenedor de información del configuracion -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <!-- Titulo libro-->
            <TextView
                android:id="@+id/txtCartTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Cantidad libros-->
            <TextView
                android:id="@+id/txtCartQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tv_cart_qty"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnRemoveOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/btn_remove"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:textColor="@color/white" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>